Version 0.3.2:
    * Fixed not showing delete icon on temporary pages when deleting
       one above.
    * Fixed inability to select externally mounted drives on OS X.
    * Fixed bug where speaker would be shown next to a playlist even
       after playlist had finished.
    * Fixed bug where first startup would show a loading spinner in
       the welcome screen album view forever.
    * Automatically upgrade resolvers when an upgrade is found.
    * Fixed last played track of a friend never expiring.
    * Fixed parsing of rdio tracks.
    * Changed steering mechanism in stations to make it clearer.
    * Fixed loading biographies of artists with '+' in the name.
    * Fixed behaviour of dropping spotify other playlists on the sidebar.
    * Fixed impossible to read source in audiocontrols on Mac.
    * Fixed crashes when playing Grooveshark tracks.
    * Fixed bug where clicking the latch button would flicker and unlatch.
    * Fixed jabber accounts not connecting properly when proxy is in use.

Version 0.3.1:
    * Fixed not resolving to local files.
    * Fixed shutdown crash on Windows.
    * Support more widget types in Javascript resolver configs.
    * Fixed bug where red headphone would be visible on My Collection
      when listened along to source went offline.
    * Draw author name as well as avatar in recently played playlists.
    * Fixed Tomahawk integration in Unity.
    * Fixed incorrect item selected in source tree when deleting temporary
      pages.
    * Fixed currently played label disappearing after 10 minutes regardless
      of length of track.
    * Fixed crash on Sparkle upgrade on OS X.

Version 0.3.0:
    * Make artist names in the album view clickable.
    * Don't start playing if a tomahawk:// link was clicked while Tomahawk
      is paused.
    * Make artist name clickable in header of Album pages.
    * Added a drop shadow to cover images, and put placeholder in jewel case.
    * Added shuffle and repeat support to tree view.