@@ -212,6 +212,9 @@ ADD_SUBDIRECTORY( src/libtomahawk )
 SET( TOMAHAWK_LIBRARIES tomahawklib )
 ADD_SUBDIRECTORY( src )
 ADD_SUBDIRECTORY( admin )
-IF(BUILD_GUI)
-    ADD_SUBDIRECTORY( src/breakpad/CrashReporter )
+
+IF( BUILD_GUI )
+    IF( NOT DISABLE_CRASHREPORTER )
+        ADD_SUBDIRECTORY( src/breakpad/CrashReporter )
+    ENDIF()
 ENDIF()
